fix overflow causing scrolling on homepage

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html, body {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   background-color: #0800e7; /* Your chosen blue background */
   overflow-x: hidden; /* Prevent horizontal overflow */
@@ -20,7 +20,7 @@ html, body {
   flex-direction: row;
   justify-content: space-around;
   width: 85%;
-  margin: 40px;
+  margin: 20px 0;
 }
 
 h1 {
